# Phi-Infinity-Lattice-Compression

./: .coverage  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LLM-Infinite-Context-Instruction.md  LLM-Infinite-Context-Prompt.md  LLM_INFINITY_INSTRUCTIONS.md  MODELS.md  Makefile  Modelfile  README.md  SECURITY.md  main.aux  main.out  mkdocs.yml  pyproject.toml  requirements.txt  run_demo.sh  setup_github_repo.sh
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: infinite-context-activation.prompt.yml  long-context-stress-test.prompt.yml  text-to-lattice-sandbox.prompt.yml  tupt-lwe-crypto-tester.prompt.yml
.github/workflows/: ci.yml  pages.yml  prompt-evals.yml
.hypothesis/constants/: 0c9efc51796560b3  1ecbdbe251c22020  20344743146f606d  2f1a4d76a1c75346  4957976a68e6246a  632edf9f47b94c8d  73822e607f60fab7  7b2c08bda9ad5de0  8dae030252616341  90871b6a5a75e4b6  bd48354d19aecb15  fcb055b1ff61dfab
benchmarks/: bench_compression.py
docs/: CONTRIBUTING.md  Models.md  NRC-Playground-Guide.md  SECURITY.md  documentation_bitcoin_integration.md  documentation_protein_folding.md  expanded_use_cases.md  index.html  index.md  protocol.md
docs/demo/: index.html
hf_space/: Dockerfile  README.md  app.py  nrc_engine.py  requirements.txt
labs/: bio_lattice.ipynb  infinite_context.ipynb  lattice_cam.ipynb  lattice_hd_wallets.ipynb  mst_quantum_reduction.ipynb  optimization_performance_benchmarks.ipynb  qrt_mass_gap.ipynb  stability_convergence_analysis.ipynb  tupt_hd_wallets.ipynb
notebooks/: biomolecule_manifold_demo.ipynb  bitcoin_hd_resonance_demo.ipynb  bitcoin_lattice_derivation_demo.ipynb  bitcoin_post_quantum_enhancement.ipynb  financial_volatility_demo.ipynb  infinite_context_demo.ipynb  infinite_context_demo_executed.ipynb  multi_agent_memory_demo.ipynb  post_quantum_cryptography_demo.ipynb  protein_lattice_folding.ipynb  quantum_key_exchange_demo.ipynb  rag_long_document_demo.ipynb  safe_key_exchange_protocol.ipynb  volatility_regime_detection_demo.ipynb
paper/: main.aux  main.out  main.tex  references.bib
phi_infinity_lattice_compression/: __init__.py  asymmetric_lattice_encryption.py  biomolecule_projection.py  bitcoin_extensions.py  compressor.py  cryptocurrency_extensions.py  exceptions.py  financial_chaos.py  lattice_crypto.py  mst_chaos_control.py  protein_accelerator.py  quantum_encryption.py  residual_hierarchy.py  stability_control.py  tupt_crypto.py  types.py  volatility_analysis.py
scripts/: verify_integrity.py
site/: 404.html  index.html  sitemap.xml
site/CONTRIBUTING/: index.html
site/SECURITY/: index.html
site/demo/: index.html
site/documentation_bitcoin_integration/: index.html
site/documentation_protein_folding/: index.html
site/expanded_use_cases/: index.html
site/protocol/: index.html
site/search/: search_index.json
src/: compression.rs  crypto.rs  lib.rs
tests/: test_asymmetric_lattice_encryption.py  test_bitcoin_extensions.py  test_compressor.py  test_crypto.py  test_financial_chaos.py  test_phi_math.py  test_protocol_parsing.py  test_quantum_encryption.py  test_residual_hierarchy.py  test_volatility_analysis.py
wiki/: Getting-Started.md  Home.md  Models.md  Usage.md
