[package]
name = "phi-infinity-lattice-compression"
version = "1.0.0"
edition = "2021"
authors = ["James Trageser <NexusResonanceCodex@gmail.com>"]
description = "φ^∞ Lattice Compression Engine - High performance compute nodes"
# This project is governed by the Nexus Resonance License (NRC-L).
# The SPDX identifier below represents the closest standard non-commercial grant.
license = "CC-BY-NC-SA-4.0"

[lib]
name = "phi_infinity_lattice_compression"
crate-type = ["cdylib", "rlib"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
