[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phi-infinity-lattice-compression"
version = "1.0.0"
description = "φ^∞ Lattice Compression Engine – Hierarchical Spiral Residual Encoding for Infinite Context and Scientific Computing"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "NRC-L"}
authors = [
    {name = "James Trageser", email = "NexusResonanceCodex@gmail.com"}
]
keywords = ["nexus-resonance-codex", "lattice-compression", "infinite-context", "mathematics", "biology", "post-quantum"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "mpmath",
    "numpy",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "ruff",
    "mypy",
    "black",
    "pytest",
    "hypothesis"
]

[tool.hatch.build.targets.wheel]
packages = ["phi_infinity_lattice_compression"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 100
target-version = ['py312']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
