[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phi-infinity-lattice-compression"
version = "2.2.1"
description = "High-Dimensional Lattice Resonance & Manifold Compression"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "CC-BY-NC-SA-4.0"}
authors = [
    {name = "James Trageser", email = "NexusResonanceCodex@gmail.com"}
]
keywords = ["nexus-resonance-codex", "phi", "lattice-resonance", "compression", "qrt", "tupt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "numpy>=1.26.0",
    "torch>=2.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "hypothesis>=6.98.0"
]

[tool.hatch.build.targets.wheel]
packages = ["phi_infinity_lattice_compression"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E402"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=phi_infinity_lattice_compression --cov-report=term-missing --cov-fail-under=95"
